--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -59,7 +59,7 @@
       <!-- 商品列表 -->
       <view class="pro-list">
         <block wx:for="{{listData}}" wx:key="key">
-          <navigator url="/">
+          <navigator url="../prodetails/prodetails?uniquekey=item.uniquekey">
             <template is="pro-list" data="{{item}}"></template>
           </navigator>
         </block>
