--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -80,13 +80,16 @@
 /*===============================================================
  =                              nav                             =
  ==============================================================*/
-
-.nav {
+.nav-box {
+  padding-top: 20rpx;
   background-color: #fff;
+}
+.nav {
   display: flex;
   width: 100%;
-  height: 180rpx;
   align-items: center;
+  padding:0 15rpx;
+  box-sizing: border-box;
 }
 
 .nav-item {
@@ -100,7 +103,8 @@
   width: 100rpx;
   height: 100rpx;
   display: block;
-  margin: 0 auto 16rpx;
+  margin: 0 auto;
+  margin-bottom: 20rpx;
 }
 
 
