--- a/pages/about/about.wxml
+++ b/pages/about/about.wxml
@@ -1,94 +1,96 @@
 <!--logs.wxml-->
-<view class="container">
-  <!-- header -->
-  <view class="header">
-    <!-- userinfo -->
-    <view class="top">
-      <view class="lside">
-        <image src="{{userInfo.avatarUrl}}"></image>
+<block wx:if="{{showPage}}">
+  <view class="container">
+    <!-- header -->
+    <view class="header">
+      <!-- userinfo -->
+      <view class="top">
+        <view class="lside">
+          <image src="{{userInfo.avatarUrl}}"></image>
+        </view>
+        <view class="center">
+          <text>{{userInfo.nickName?userInfo.nickName:'请登录'}}</text>
+          <text>LV: 4</text>
+        </view>
+        <view class="rside">
+          <image src="../../images/code.png"></image>
+        </view>
       </view>
-      <view class="center">
-        <text>{{userInfo.nickName?userInfo.nickName:'请登录'}}</text>
-        <text>LV: 4</text>
-      </view>
-      <view class="rside">
-        <image src="../../images/code.png"></image>
+      <!-- card -->
+      <view class="bottom">
+        <view class="info-card-warp">
+          <view class="info-card">
+            <view class="lside">
+              <text>我的团长：</text>
+              <text>我的团员：</text>
+              <text>我的排名：</text>
+              <text class="commission">￥ 99.99</text>
+              <text>当前佣金</text>
+            </view>
+            <view class="rside">
+              <text>大简木·羽衣</text>
+              <text>999</text>
+              <text>999</text>
+              <navigator url="../commission/commission?title='测试'">
+                <text class="commission-withdrawals">佣金提现</text>
+              </navigator>
+            </view>
+          </view>
+        </view>
       </view>
     </view>
-    <!-- card -->
-    <view class="bottom">
-      <view class="info-card-warp">
-        <view class="info-card">
-          <view class="lside">
-            <text>我的团长：</text>
-            <text>我的团员：</text>
-            <text>我的排名：</text>
-            <text class="commission">￥ 99.99</text>
-            <text>当前佣金</text>
+    <!-- list -->
+    <view class="about-list">
+      <navigator url="../collection/collection">
+        <view class="about-list-item">
+          <view>
+            <image src="../../images/icon01.png"></image>
           </view>
-          <view class="rside">
-            <text>大简木·羽衣</text>
-            <text>999</text>
-            <text>999</text>
-            <navigator url="../commission/commission?title='测试'">
-              <text class="commission-withdrawals">佣金提现</text>
-            </navigator>
+          <view>
+            <text>我的收藏</text>
           </view>
+          <view>
+            <image src="../../images/icons01.png"></image>
+          </view>
+        </view>
+      </navigator>
+      <navigator url="../coupon/coupon">
+        <view class="about-list-item">
+          <view>
+            <image src="../../images/icon02.png"></image>
+          </view>
+          <view>
+            <text>我的优惠券</text>
+          </view>
+          <view>
+            <image src="../../images/icons01.png"></image>
+          </view>
+        </view>
+      </navigator>
+      <navigator url="../bindphone/bindphone">
+        <view class="about-list-item">
+          <view>
+            <image src="../../images/icon03.png"></image>
+          </view>
+          <view>
+            <text>绑定手机号</text>
+          </view>
+          <view>
+            <image src="../../images/icons01.png"></image>
+          </view>
+        </view>
+      </navigator>
+      <view class="about-list-item">
+        <view>
+          <image src="../../images/icon04.png"></image>
+        </view>
+        <view>
+          <text>关于我们</text>
+        </view>
+        <view>
+          <image src="../../images/icons01.png"></image>
         </view>
       </view>
     </view>
   </view>
-  <!-- list -->
-  <view class="about-list">
-    <navigator url="../collection/collection">
-      <view class="about-list-item">
-        <view>
-          <image src="../../images/icon01.png"></image>
-        </view>
-        <view>
-          <text>我的收藏</text>
-        </view>
-        <view>
-          <image src="../../images/icons01.png"></image>
-        </view>
-      </view>
-    </navigator>
-    <navigator url="../coupon/coupon">
-      <view class="about-list-item">
-        <view>
-          <image src="../../images/icon02.png"></image>
-        </view>
-        <view>
-          <text>我的优惠券</text>
-        </view>
-        <view>
-          <image src="../../images/icons01.png"></image>
-        </view>
-      </view>
-    </navigator>
-    <navigator url="../bindphone/bindphone">
-      <view class="about-list-item">
-        <view>
-          <image src="../../images/icon03.png"></image>
-        </view>
-        <view>
-          <text>绑定手机号</text>
-        </view>
-        <view>
-          <image src="../../images/icons01.png"></image>
-        </view>
-      </view>
-    </navigator>
-    <view class="about-list-item">
-      <view>
-        <image src="../../images/icon04.png"></image>
-      </view>
-      <view>
-        <text>关于我们</text>
-      </view>
-      <view>
-        <image src="../../images/icons01.png"></image>
-      </view>
-    </view>
-  </view>
-</view>
+</block>
