--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -41,6 +41,12 @@
       </block>
     </block>
   </view>
+  <view class="useStatus" wx:if="{{showUsed&&usedOrderStatus!=3}}">
+  {{usedOrderStatus == 2 ? '暂无已使用订单!' : '正在加载中...'}}
+  </view>
+  <view class="useStatus" wx:if="{{!showUsed&&useOrderStatus!=3}}">
+  {{useOrderStatus == 2 ? '暂无待使用订单!' : '正在加载中...'}}
+  </view>
   <!-- 选择使用数量 -->
   <block wx:if="{{isShowChoose}}">
     <view class="pop" catchtap="handleClosePop">
