--- a/pages/prodetails/prodetails.wxml
+++ b/pages/prodetails/prodetails.wxml
@@ -11,7 +11,7 @@
     <view class="info">
       <view class="info-header">
         <view class="top">
-          <text>一乐拉面(叉烧+卤蛋+牛肉)ddddddddddddddddddddddddddddddddddddddddddddddddddddd</text>
+          <text>一乐拉面(叉烧+卤蛋+牛肉)</text>
           <text>250m</text>
         </view>
         <view class="bottom">
