添加了首页商品详情页店铺详情页的数据调用及搜索界面的接口测试

--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -6,9 +6,9 @@
     <view class="header">
       <view class="search-box">
         <icon type="search" size="12" color="#a6a6a6" />
-        <input placeholder="拉面" placeholder-style="height:56rpx;" focus="true" />
+        <input bindinput="recordSearchKeyword" placeholder="拉面" placeholder-style="height:56rpx;" focus="true" />
       </view>
-      <view class="search-btn" bindtap="handleChooseAddress">
+      <view class="search-btn" bindtap="handleSearch">
         <text>搜索</text>
       </view>
     </view>
