--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -89,16 +89,16 @@
       </view>
       <!-- 标签的导航 -->
       <view class="tag-nav" style="position:{{tagNavFixed ? 'fixed' : 'static'}};background-color: {{tagNavFixed ? '#f7f7fa' : '#fff'}};">
-        <text>综合排序</text>
-        <text>销量最高</text>
-        <text>距离最近</text>
-        <text>价格最低</text>
+        <text catchtap="handleComprehensiveSort">综合排序</text>
+        <text catchtap="handleSalesSort">销量最高</text>
+        <text catchtap="handleDistanceSort">距离最近</text>
+        <text catchtap="handlePriceSort">价格最低</text>
       </view>
       <!-- 商品列表 -->
       <view class="pro-list">
         <block wx:for="{{listData}}" wx:key="key">
-          <navigator url="../prodetails/prodetails?uniquekey=item.uniquekey">
-            <template is="pro-list" data="{{item}}"></template>
+          <navigator url="../prodetails/prodetails?goodsid={{item.goodsid}}&shopid={{item.shopid}}">
+            <template is="pro-list" data="{{item,index}}"></template>
           </navigator>
         </block>
       </view>
