--- a/pages/prodetails/prodetails.wxml
+++ b/pages/prodetails/prodetails.wxml
@@ -11,32 +11,32 @@
     <view class="info">
       <view class="info-header">
         <view class="top">
-          <text>一乐拉面(叉烧+卤蛋+牛肉)</text>
-          <text>250m</text>
+          <text>{{shopName}}({{goodsName}})</text>
+          <text>{{distance}}</text>
         </view>
         <view class="bottom">
-          <text>￥9.9</text>
-          <text>月销99</text>
-          <text>综合评分4.8</text>
+          <text>￥{{price}}</text>
+          <text>月销{{monthSum}}</text>
+          <text>综合评分{{score}}</text>
         </view>
       </view>
-      <view class="info-list">
+      <view class="info-list" catchtap="handleLocation">
         <view>
           <image src="../../images/icon05.png"></image>
         </view>
         <view>
-          <text>火之国东大街与南大街交叉口向北20米路西一乐拉面店</text>
+          <text>{{address}}</text>
         </view>
         <view>
           <image src="../../images/icons01.png"></image>
         </view>
       </view>
-      <view class="info-list">
+      <view class="info-list" catchtap="handleMakePhone">
         <view>
           <image src="../../images/icon06.png"></image>
         </view>
         <view>
-          <text>18739037057</text>
+          <text>{{phone}}</text>
         </view>
         <view>
           <image src="../../images/icons01.png"></image>
@@ -65,8 +65,8 @@
       <!-- 商品列表 -->
       <view class="pro-list">
         <block wx:for="{{listData}}" wx:key="key">
-          <navigator url="/">
-            <template is="pro-list" data="{{item}}"></template>
+          <navigator url="./prodetails?goodsid={{item.goodsid}}&shopid={{item.shopid}}">
+            <template is="pro-list" data="{{item,index}}"></template>
           </navigator>
         </block>
       </view>
@@ -74,7 +74,7 @@
     </view>
     <!-- 购买 -->
     <view class="buy">
-      <view>
+      <view catchtap="handleGoToShop">
         <image src="../../images/icon08.png"></image>
         <text>店铺</text>
       </view>
