--- a/pages/shopdetails/shopdetails.wxml
+++ b/pages/shopdetails/shopdetails.wxml
@@ -4,38 +4,38 @@
 <view class="container">
   <!-- 海报图 -->
   <view class="header">
-    <image src="../../images/pro-poster.png" mode="widthFix"></image>
+    <image src="https://www.91tuoguan.cn/{{shopImg}}" mode="widthFix"></image>
   </view>
   <!-- 列表信息 -->
   <view class="info">
     <view class="info-header">
       <view class="top">
-        <text>一乐拉面(叉烧+卤蛋+牛肉)ddddddddddddddddddddddddddddddddddddddddddddddddddddd</text>
-        <text>250m</text>
+        <text>{{shopName}}</text>
+        <text></text>
       </view>
       <view class="bottom">
-        <text>月销99</text>
-        <text>综合评分4.8</text>
-        <text>260m</text>
+        <text>月销{{monthSum}}</text>
+        <text>综合评分{{score}}</text>
+        <text>{{distance}}</text>
       </view>
     </view>
-    <view class="info-list">
+    <view class="info-list" catchtap="handleLocation">
       <view>
         <image src="../../images/icon05.png"></image>
       </view>
       <view>
-        <text>火之国东大街与南大街交叉口向北20米路西一乐拉面店</text>
+        <text>{{address}}</text>
       </view>
       <view>
         <image src="../../images/icons01.png"></image>
       </view>
     </view>
-    <view class="info-list">
+    <view class="info-list" catchtap="handleMakePhone">
       <view>
         <image src="../../images/icon06.png"></image>
       </view>
       <view>
-        <text>18739037057</text>
+        <text>{{phone}}</text>
       </view>
       <view>
         <image src="../../images/icons01.png"></image>
@@ -53,8 +53,8 @@
     <!-- 商品列表 -->
     <view class="pro-list">
       <block wx:for="{{listData}}" wx:key="key">
-        <navigator url="/">
-          <template is="pro-list" data="{{item}}"></template>
+        <navigator url="../prodetails/prodetails?goodsid={{item.goodsid}}&shopid={{item.shopid}}">
+          <template is="pro-list" data="{{item,index}}"></template>
         </navigator>
       </block>
     </view>
