--- a/template/view/pro-list.wxss
+++ b/template/view/pro-list.wxss
@@ -19,6 +19,7 @@
 
 .list-item .rside {
   flex: 1;
+  overflow-x: hidden;
 }
 
 .list-item .pro-title {
@@ -36,7 +37,7 @@
   font-size: 30rpx;
   color: #000;
   font-weight: 600;
-  width: 180rpx;
+  width: 220rpx;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
