--- a/pages/collection/collection.wxml
+++ b/pages/collection/collection.wxml
@@ -3,8 +3,8 @@
   <!-- 商品列表 -->
   <view class="pro-list">
     <block wx:for="{{listData}}" wx:key="key">
-      <navigator url="/">
-        <template is="pro-list" data="{{item}}"></template>
+      <navigator url="../prodetails/prodetails?goodsid={{item.goodsid}}&shopid={{item.shopid}}">
+        <template is="pro-list" data="{{item,index}}"></template>
       </navigator>
     </block>
   </view>
